ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: generic-ns
  name: generic-nginx-ing
  labels:
    name: generic-nginx-ing
    env: "dev"
    version: "v1"
  annotations:
    component: "ing"
    part-of: "generic"
    managed-by: "terraform"
    created-by: "saurav_mitra"
    "kubernetes.io/ingress.class": "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: generic-nginx-svc
            port: 
              number: 80
